--- a/charts/rabbitmq-cluster/templates/vhost.yaml
+++ b/charts/rabbitmq-cluster/templates/vhost.yaml
@@ -1,14 +1,18 @@
 ---
-{{- if .Values.rabbitmq.vhost.enabled }}
 {{- $clusterRef := .Values.rabbitmq.cluster.name | default (include "rabbitmq-cluster.fullname" .) }}
+{{- range $key, $vhost := .Values.rabbitmq.vhosts }}
+{{- if $vhost.enabled }}
+{{- $vhostName := $vhost.name | default $key }}
 apiVersion: rabbitmq.com/v1beta1
 kind: Vhost
 metadata:
-  name: {{ .Values.rabbitmq.vhost.name | default (include "rabbitmq-cluster.fullname" .) }}
+  name: {{ (printf "%s-%s" $clusterRef $vhostName) | include "com.klicktipp.slugify-string" | quote }}
   labels:
-    {{- include "rabbitmq-cluster.labels" . | nindent 4 }}
+    {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
 spec:
-  name: {{ .Values.rabbitmq.vhost.name | quote }}
+  name: {{ $vhostName | quote }}
   rabbitmqClusterReference:
     name: {{ $clusterRef | quote }}
+---
+{{- end }}
 {{- end }}
