--- a/charts/rabbitmq-cluster/templates/topology.yaml
+++ b/charts/rabbitmq-cluster/templates/topology.yaml
@@ -4,6 +4,7 @@
 {{- $vhost := include "rabbitmq-cluster.default-vhost" . }}
 
 {{- range $name, $queue := .Values.rabbitmq.topology.queues }}
+{{- if ($queue.enabled | default true) }}
 
 {{- $queueName := $queue.name | default $name }}
 {{- $queueType := $queue.type | default "quorum"  }}
@@ -75,9 +76,11 @@ spec:
     name: {{ $clusterRef | quote }}
 {{- end }}  {{/* END binding */}}
 
+{{- end }} {{/* END if queue enabled */}}
 {{- end }} {{/* END queue loop */}}
 
 {{- range $name, $policy := (.Values.rabbitmq.topology.policies | default (dict)) }}
+{{- if ($policy.enabled | default true) }}
 ---
 {{- $policyName := $policy.name | default $name }}
 {{- $pattern := required (printf "rabbitmq.topology.policies.%s.pattern is required" $name) $policy.pattern }}
@@ -110,6 +113,7 @@ spec:
     {{- else }}
     name: {{ $clusterRef | quote }}
     {{- end }}
+{{- end }} {{/* END if policy enabled */}}
 {{- end }} {{/* END policies loop */}}
 
 {{- end }} {{/* END if enabled */}}
