--- a/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
@@ -28,11 +28,14 @@ spec:
   terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | int }}
   rabbitmq:
     {{- $env := .Values.rabbitmq.cluster.environment | lower }}
-    {{- if or (eq $env "prod") (eq $env "staging") (eq $env "dev") }}
     additionalConfig: |
-      {{- $configFile := printf "files/rabbitmq-configs/%s.conf" $env }}
-      {{- tpl (.Files.Get $configFile) . | nindent 6 }}
-    {{- end }}
+      {{- if or (eq $env "prod") (eq $env "staging") (eq $env "dev") -}}
+      {{- $configFile := printf "files/rabbitmq-configs/%s.conf" $env -}}
+      {{- tpl (.Files.Get $configFile) . | nindent 6 -}}
+      {{- end -}}
+      {{- with .Values.rabbitmq.cluster.extraConfig }}
+      {{- . | nindent 6 }}
+      {{- end }}
     additionalPlugins:
       {{- $additionalPlugins := .Values.rabbitmq.cluster.additionalPlugins | default (list) }}
       {{- $extraPlugins := .Values.rabbitmq.cluster.extraPlugins | default (list) }}
