--- a/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
@@ -27,15 +27,20 @@ spec:
   {{- end }}
   terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | int }}
   rabbitmq:
-    {{- $env := .Values.rabbitmq.cluster.environment | lower }}
+    {{- $env := .Values.rabbitmq.cluster.environment | default "" | lower }}
+    {{- $extraConfig := .Values.rabbitmq.cluster.extraConfig -}}
+    {{- $hasEnvConfig := or (eq $env "prod") (eq $env "staging") (eq $env "dev") -}}
+    {{- if or $hasEnvConfig $extraConfig }}
     additionalConfig: |
-      {{- if or (eq $env "prod") (eq $env "staging") (eq $env "dev") -}}
+      {{- if $hasEnvConfig -}}
       {{- $configFile := printf "files/rabbitmq-configs/%s.conf" $env -}}
       {{- tpl (.Files.Get $configFile) . | nindent 6 -}}
       {{- end -}}
-      {{- with .Values.rabbitmq.cluster.extraConfig }}
+      {{- with $extraConfig }}
+      # Extra config
       {{- . | nindent 6 }}
       {{- end }}
+    {{- end }}
     additionalPlugins:
       {{- $additionalPlugins := .Values.rabbitmq.cluster.additionalPlugins | default (list) }}
       {{- $extraPlugins := .Values.rabbitmq.cluster.extraPlugins | default (list) }}
