--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -58,10 +58,10 @@ rabbitmq:
       #   cpu: 1000m
       #   memory: 1Gi
 
-    # Environment preset (PROD, STAGING, DEV or custom).
+    # Configuration profile preset (PROD, STAGING, DEV or custom).
     # If set, it applies predefined RabbitMQ configuration snippets.
     # Supported values: "PROD", "STAGING", "DEV". If empty or null, no preset is applied.
-    environment: "DEV"
+    configProfile: "DEV"
 
     # Additional RabbitMQ configuration as a multiline string.
     # This will be appended to the environment-specific configuration.
