Update RabbitMQ config for prod, dev, and staging environments

--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/dev.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/dev.conf
@@ -1,5 +1,20 @@
-listeners.tcp = none
-queue_leader_locator = balanced
-disk_free_limit.absolute = 2GB
+###############################################################################
+# default rabbitmq configuration file for DEV environment                     #
+###############################################################################
+
+#
+# https://www.rabbitmq.com/docs/configure
+#
+
+disk_free_limit.absolute = {{ include "rabbitmq-cluster.calculateDiskFreeLimit" .Values.rabbitmq.cluster.persistence.storage }}MB
+
+# activate console output
 log.console = true
+# https://www.rabbitmq.com/docs/logging#log-levels
 log.console.level = info
+# log.console.formatter = json
+
+queue_leader_locator = client-local
+
+# Keep dev lightweight: classic queues by default (single-node anyway)
+default_queue_type = classic
