--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
@@ -1,16 +1,22 @@
-## --- 10-tls-only.conf (enforce no plaintext AMQP) ---
-# (The Service may still expose 5672, but RabbitMQ will not listen on it.)
-listeners.tcp = none
+###############################################################################
+# default rabbitmq configuration file for PROD environment                    #
+###############################################################################
 
-## --- 20-partitions.conf (3-node split-brain protection) ---
-cluster_partition_handling = pause_minority
+#
+# https://www.rabbitmq.com/docs/configure
+#
 
-## --- 30-queue-leaders.conf (spread quorum/stream leaders) ---
+disk_free_limit.absolute = {{ include "rabbitmq-cluster.calculateDiskFreeLimit" .Values.rabbitmq.cluster.persistence.storage }}MB
+
+# activate console output
+log.console = true
+# https://www.rabbitmq.com/docs/logging#log-levels
+log.console.level = info
+# log.console.formatter = json
+
 queue_leader_locator = balanced
 
-## --- 40-resources.conf (disk alarm threshold) ---
-disk_free_limit.absolute = 2GB
+# Make unspecified queues quorum by default (HA/data-safety oriented)
+default_queue_type = quorum
 
-## --- 50-logging.conf (Kubernetes-friendly logging) ---
-log.console = true
-log.console.level = info
+cluster_partition_handling = pause_minority
