--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
@@ -1,11 +1,23 @@
-listeners.tcp = none
+###############################################################################
+# default rabbitmq configuration file for STAGING environment                 #
+###############################################################################
 
-# Prefer server-1 as the "keep running" node in a partition.
-cluster_partition_handling = pause_if_all_down
-cluster_partition_handling.pause_if_all_down.nodes.1 = rabbit@{{ .Values.rabbitmq.cluster.name | default (include "rabbitmq-cluster.fullname" .) }}-server-1
+#
+# https://www.rabbitmq.com/docs/configure
+#
+
+disk_free_limit.absolute = {{ include "rabbitmq-cluster.calculateDiskFreeLimit" .Values.rabbitmq.cluster.persistence.storage }}MB
+
+# activate console output
+log.console = true
+# https://www.rabbitmq.com/docs/logging#log-levels
+log.console.level = info
+# log.console.formatter = json
 
 queue_leader_locator = balanced
-disk_free_limit.absolute = 2GB
 
-log.console = true
-log.console.level = info
+# Make unspecified queues quorum by default (HA/data-safety oriented)
+default_queue_type = quorum
+
+# Keep the operator default partition handling explicit for clarity
+cluster_partition_handling = autoheal
