Optimize RabbitMQ configs for prod, dev, and staging environments

--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/dev.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/dev.conf
@@ -14,7 +14,8 @@ log.console = true
 log.console.level = info
 # log.console.formatter = json
 
-queue_leader_locator = client-local
+# moderate stats overhead
+collect_statistics_interval = 10000
 
 # Keep dev lightweight: classic queues by default (single-node anyway)
 default_queue_type = classic
