--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
@@ -14,9 +14,16 @@ log.console = true
 log.console.level = info
 # log.console.formatter = json
 
+# reduce CPU overhead from stats in high-load clusters (trade-off: UI freshness)
+collect_statistics_interval = 30000
+
 queue_leader_locator = balanced
 
 # Make unspecified queues quorum by default (HA/data-safety oriented)
 default_queue_type = quorum
 
 cluster_partition_handling = pause_minority
+
+# handle reconnect bursts
+tcp_listen_options.backlog = 4096
+tcp_listen_options.nodelay = true
