--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
@@ -14,6 +14,10 @@ log.console = true
 log.console.level = info
 # log.console.formatter = json
 
+# moderate stats overhead
+collect_statistics_interval = 10000
+
+# avoid leader hotspots
 queue_leader_locator = balanced
 
 # Make unspecified queues quorum by default (HA/data-safety oriented)
@@ -21,3 +25,7 @@ default_queue_type = quorum
 
 # Keep the operator default partition handling explicit for clarity
 cluster_partition_handling = autoheal
+
+# handle reconnect bursts
+tcp_listen_options.backlog = 4096
+tcp_listen_options.nodelay = true
