Adjust cluster_partition_handling logic based on replica count in prod and staging configs

--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/prod.conf
@@ -22,7 +22,8 @@ queue_leader_locator = balanced
 # Make unspecified queues quorum by default (HA/data-safety oriented)
 default_queue_type = quorum
 
-cluster_partition_handling = pause_minority
+# https://www.rabbitmq.com/docs/partitions#automatic-handling
+cluster_partition_handling = {{ if ge (int .Values.rabbitmq.cluster.replicas) 3 }}pause_minority{{ else }}autoheal{{ end }}
 
 # handle reconnect bursts
 tcp_listen_options.backlog = 4096
