--- a/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
+++ b/charts/rabbitmq-cluster/files/rabbitmq-configs/staging.conf
@@ -23,8 +23,8 @@ queue_leader_locator = balanced
 # Make unspecified queues quorum by default (HA/data-safety oriented)
 default_queue_type = quorum
 
-# Keep the operator default partition handling explicit for clarity
-cluster_partition_handling = autoheal
+# https://www.rabbitmq.com/docs/partitions#automatic-handling
+cluster_partition_handling = {{ if ge (int .Values.rabbitmq.cluster.replicas) 3 }}pause_minority{{ else }}autoheal{{ end }}
 
 # handle reconnect bursts
 tcp_listen_options.backlog = 4096
