--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -58,6 +58,15 @@ rabbitmq:
       #   cpu: 1000m
       #   memory: 1Gi
 
+    # Configuration profile preset (PROD, STAGING, DEV or custom).
+    # If set, it applies predefined RabbitMQ configuration snippets.
+    # Supported values: "PROD", "STAGING", "DEV". If empty or null, no preset is applied.
+    configProfile: null
+
+    # Additional RabbitMQ configuration as a multiline string.
+    # This will be appended to the environment-specific configuration.
+    extraConfig: ""
+
     # Default plugins
     additionalPlugins:
       - rabbitmq_management
