Update klicktipp-common dependency to version 0.2.0 and rename chart for consistency

--- a/charts/klicktipp-common/Chart.yaml
+++ b/charts/klicktipp-common/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: klicktipp.common
+name: klicktipp-common
 description: A Helm library chart for KlickTipp common templates
 type: library
-version: 0.1.0
+version: 0.2.0
 appVersion: "1.0.0"
