--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -3,7 +3,7 @@ apiVersion: v2
 name: rabbitmq-cluster
 description: Helm chart to define a RabbitMQ cluster via official rabbitmq.com CRDs (RabbitmqCluster).
 type: application
-version: "2.4.0"
+version: "2.4.1"
 appVersion: "4.2-management"
 kubeVersion: ">= 1.33.0-0"
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
@@ -17,6 +17,6 @@ keywords:
   - messaging
   - amqp
 dependencies:
-  - name: klicktipp.common
-    version: 0.1.0
+  - name: klicktipp-common
+    version: 1.0.0
     repository: "https://klicktipp.github.io/helm-charts/"
